--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,7 @@
 file.reference.HTML5Application-public_html=public_html
 file.reference.HTML5Application-test=test
+file.reference.uidevelopment-public_html=public_html
+file.reference.uidevelopment-Unit_Tests=Unit Tests
 files.encoding=UTF-8
-site.root.folder=${file.reference.HTML5Application-public_html}
-test.folder=${file.reference.HTML5Application-test}
+site.root.folder=${file.reference.uidevelopment-public_html}
+test.folder=${file.reference.uidevelopment-Unit_Tests}
